apps/wekan/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wekan-ingress
  namespace: wekan
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: wekan.mbtux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wekan
            port:
              number: 80
